SERVER-126396 Reject system-variable references as join predicates (#54827)

GitOrigin-RevId: 67f71f15dc3c1fe995235de70811014e17d65ee3